# adele-judge

./: .gitignore  README.md  pyproject.toml
configs/: adele_judge_qwen3_8b.yaml
scripts/: debug_tokenization.py  evaluate_judge.py  predict_judge.py  prepare_dataset.py  run_lomo.py  train_judge.py
scripts/slurm/: prepare_train_8gpu.slurm
src/adele_judge/: __init__.py  cli.py  config.py  data.py  formatting.py  hub.py  hub_pipeline.py  inference.py  metrics.py  modeling.py  pipeline.py  reporting.py  splits.py  tokenization.py  train.py  utils.py
src/adele_judge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
